Frankbelford/uatv1ba/force-app/main/default/objects/Candidate_Audit__c/Candidate_Audit__c.object-meta.xml
<CustomObject>
    <label>Candidate Audit</label>
    <nameField>
        <displayFormat>AU-{0000}</displayFormat>
        <label>Audit No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidate Audits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>