Frankbelford/uatv1ba/force-app/main/default/objects/Candidate_Audit__c/fields/Audit_to__c.field-meta.xml
<CustomField>
    <fullName>Audit_to__c</fullName>
    <label>Audit to</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Minor fail</fullName>
            </value>
            <value>
                <fullName>Critical fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>