Frankbelford/uatv1ba/force-app/main/default/objects/Candidate_Audit__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <label>Candidate</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Candidate Audits</relationshipLabel>
    <relationshipName>Candidate_Audits</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>